# MobileInv

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat
.github/workflows/: mobile-feed.yml
bist_picker/: __main__.py  cli.py  macro_check.py  mobile_feed.py  mobile_snapshot.py  read_service.py
bist_picker/api/: __init__.py  __main__.py  app.py  schemas.py
bist_picker/backtest/: __init__.py  engine.py
bist_picker/classification/: __init__.py  company_type.py  risk_classifier.py  sector_mapper.py
bist_picker/cleaning/: financial_prep.py  inflation.py
bist_picker/config/: cash_signal.yaml  exclusions.yaml  llm_config.yaml  macro.yaml  scoring_weights.yaml  sectors.yaml  settings.yaml  subsidiaries.yaml  thresholds.yaml
bist_picker/dashboard/: __init__.py  app.py  data_access.py  pipeline_runner.py  style.py
bist_picker/data/: cache.py  fetcher.py
bist_picker/db/: connection.py  schema.py
bist_picker/output/: excel.py  google_sheets.py  llm_report.py  performance.py  terminal.py
bist_picker/portfolio/: cash_signal.py  exit_rules.py  macro_overlay.py  selector.py  (+2 more)
docs/: mobile_app_v2_plan.md  mobile_cloud_sync.md  stock_picking_audit.md
tests/: test_banking_model.py  test_data_fetcher.py  test_dcf_scorer.py  test_enhanced_scoring.py  test_evds_nowcast.py  test_holding_model.py  test_insider_scorer.py  test_llm_analyzer.py  test_mobile_api.py  test_mobile_snapshot_export.py  test_phase5_transparency.py  test_point_in_time_selection.py  test_portfolio_selector.py  test_technical_integration.py  test_technical_scorer.py
web/: review.html
(+55 files in other folders)
